# membra-qr-gateway

./: .dockerignore  .env.example  .env.production.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MEMBRA_MODULE.md  MEMBRA_PROTOCOL.md  MISSING.md  Makefile  README.md  SECURITY.md  app.py  docker-compose.prod.yml  docker-compose.yml  index.html  netlify.toml  nginx.conf.example  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: ci.yml  deploy-devnet.yml  deploy-pages.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  protocol-ci.yml  security-scan.yml
api/: app.py  github-integration.ts  llm-inference.ts  main.py  pyproject.toml  requirements.txt
api/core/: config.py  errors.py  health.py  lifecycle.py  logging.py
api/db/: models.py  session.py
api/db/migrations/: 0001_init.sql  0002_audit_log.sql  0003_receipts.sql  0004_protocol_state.sql  __init__.py
api/db/repositories/: audit_repository.py  protocol_repository.py  qr_repository.py  receipt_repository.py
api/observability/: alerts.py  metrics.py  tracing.py
api/observability/dashboards/: api-health.json  security-events.json
api/routes/: admin.py  audit.py  health.py  metrics.py  protocol.py  qr.py  receipts.py  wallet.py
api/security/: api_keys.py  auth.py  encryption.py  input_validation.py  jwt.py  middleware.py  rate_limit.py  request_signing.py  secrets.py
api/services/: audit_service.py  chain_client.py  notification_service.py  protocol_service.py  qr_service.py  receipt_service.py  storage_service.py  wallet_service.py
config/: app.config.ts  chains.config.ts  observability.config.ts  production.json  rate-limit.config.ts  security.config.ts  staging.json
docs/: ARCHITECTURE.md  LLM_INFERENCE_LAYER.md  PRODUCTION_READINESS.md  THREAT_MODEL.md
infra/docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
infra/k8s/: api-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  secrets.example.yaml
manifests/: MBR-FIL-FIN-ACC-EXP-LC1-V0001-US-GH3A61-00000000-SDV-00000000-KPI0-NCL-AFD7.json  MBR-FIL-FIN-ACC-INV-LC1-V0001-US-GH3A61-00000000-SDV-00000000-KPI0-NCL-74DD.json  MBR-FIL-FIN-ACC-LED-LC1-V0001-US-GH3A61-00000000-SDV-00000000-KPI0-NCL-87F3.json
protocol/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
protocol/docs/: COMPLIANCE.md  DEPLOYMENT.md  FRONTEND_INTEGRATION.md  PROTOCOL.md  SECURITY.md
protocol/programs/membra_attestation/: Cargo.toml
protocol/programs/membra_attestation/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_attestation/src/instructions/: challenge_attestation.rs  initialize.rs  mod.rs  publish_project_score.rs  register_project.rs  register_validator.rs  resolve_challenge.rs  reward_validator.rs  stake_validator.rs  submit_attestation.rs
protocol/programs/membra_governance/: Cargo.toml
protocol/programs/membra_governance/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_governance/src/instructions/: approve_action.rs  cancel_action.rs  execute_approved_action.rs  initialize_governance.rs  mod.rs  propose_action.rs
protocol/programs/membra_ido/: Cargo.toml
protocol/programs/membra_ido/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_ido/src/instructions/: buy_ido.rs  cancel_ido.rs  claim_ido_tokens.rs  finalize_ido.rs  initialize_ido.rs  mod.rs  pause_ido.rs  refund_ido.rs
protocol/programs/membra_llm/: Cargo.toml
protocol/programs/membra_llm/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_llm/src/instructions/: create_prompt_asset.rs  mod.rs  record_inference_response.rs  submit_inference_request.rs  update_prompt_metadata.rs  verify_merkle_proof.rs
protocol/programs/membra_mmce/: Cargo.toml
protocol/programs/membra_mmce/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_mmce/src/instructions/: attest_mir.rs  create_memory_collateral_receipt.rs  create_mir.rs  initialize_memory_vault.rs  mod.rs  register_repo_proof.rs  revoke_collateral_receipt.rs  update_collateral_score.rs
protocol/programs/membra_rebase/: Cargo.toml
protocol/programs/membra_rebase/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_rebase/src/instructions/: deposit.rs  execute_rebase.rs  initialize_rebase.rs  mod.rs  pause_rebase.rs  resume_rebase.rs  update_oracle_price.rs  update_pyth_price.rs  update_rebase_params.rs  update_switchboard_price.rs  withdraw.rs
protocol/programs/membra_rewards/: Cargo.toml
protocol/programs/membra_rewards/src/: errors.rs  events.rs  lib.rs  state.rs
protocol/programs/membra_rewards/src/instructions/: claim_rewards.rs  close_lock.rs  close_stake_account.rs  create_lock.rs  initialize_rewards.rs  mod.rs  stake.rs  unstake.rs
protocol/scripts/: deploy_devnet.sh  deploy_localnet.sh  deploy_mainnet.sh  export_idls.ts  init_governance.ts  seed_pool.ts  simulate_rebase.ts  transfer_upgrade_authority.ts  verify_programs.ts
protocol/sdk/: attestation.ts  client.ts  constants.ts  errors.ts  governance.ts  ido.ts  index.ts  llm.ts  merkle.ts  mmce_client.ts  mmce_types.ts  rebase.ts  receipts.ts  rewards.ts  tokenization.ts  types.ts
protocol/tests/: membra_governance.ts  membra_ido.ts  membra_mmce.ts  membra_rebase.ts  membra_rewards.ts
scripts/: deploy-netlify.sh  deploy-vercel.sh
src/: App.jsx  index.css  main.jsx  utils.js
tests/: conftest.py  test_artifacts.py  test_health.py  test_rate_limits.py  test_tokenomics.py
(+76 files in other folders)
