[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "membra-qr-gateway"
version = "2.0.0"
description = "MEMBRA QR Gateway — proof, wallet, artifact, and scan gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "aiosqlite==0.20.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.0",
    "structlog==24.2.0",
    "prometheus-client==0.20.0",
    "stripe==10.7.0",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.8",
    "anyio==4.4.0",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
