[workspace]
members = [
    "programs/membra_ido",
    "programs/membra_rebase",
    "programs/membra_rewards",
    "programs/membra_governance",
    "programs/membra_mmce",
    "programs/membra_llm",
    "programs/membra_attestation",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "thin"
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true
