[package]
name = "membra_llm"
version = "0.1.0"
description = "MEMBRA LLM Inference Layer - Prompts as Assets, Responses as Transactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_llm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
sha2 = "0.10"
merkle-tree = "0.1"
