[package]
name = "membra_mmce"
version = "0.1.0"
description = "MEMBRA Memory Collateral Engine (MIP-002)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_mmce"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
