[package]
name = "membra_rebase"
version = "0.1.0"
description = "MEMBRA elastic-supply rebase program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_rebase"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
