[package]
name = "membra_rewards"
version = "0.1.0"
description = "MEMBRA staking and lock incentives program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
